styles/main.css
/* side-wide styles */

@font-face {
    font-family: "Mononoki";
    src: url("/styles/mononoki_webfont_kit/mononoki-regular-webfont.woff") format("woff");
}

:root {
    --header-height: 60px;
    --column-padding-vertical: 20px;
    --column-padding-horizontal: 20px;
    --dark-blue: #1b365c;
    --light-blue: #9ce0ee;
    --pastel-peach: #fcd2b8;
    --pastel-yellow: #fcf5d8;
}

html {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
}

body {
    flex-grow: 1;
    width: 100%;
    background-color: var(--light-blue);
    display: flex;
    flex-direction: column;
    margin: 0px;
    font-family: 'Inter', sans-serif;
    color: #1b365c;
}

body a:link {
    color: var(--dark-blue);
}

body a:visited {
    color: var(--dark-blue);
}

code {
    font-family: 'Mononoki', serif;
    font-size: 15px;
}

pre {
    max-width: calc(100vw - calc(var(--column-padding-horizontal) * 2) - 40px);
    overflow: auto;
    background-color: var(--pastel-yellow);
    white-space: pre;
    border-radius: 15px;
}

blockquote {
    background-color: #f8c3a4;
    margin: 25px 0 25px 0;
    padding: 15px;
    border-left: 15px var(--pastel-yellow) solid;
    border-radius: 15px;
}

nav a:link {
    text-decoration: none;
}

h1 {
    font-weight: 700;
    margin-top: 0px;
}

h2 {
    font-weight: 700;
    margin-top: 0px;
    scroll-margin-top: calc(var(--header-height) + 10px);
}

section {
    scroll-margin-top: calc(var(--header-height) + 10px);
}

.highlight {
    display: inline;
    padding: 5px 0;
    font-weight: 700;
    background: var(--light-blue);
    border-radius: 15px;
    box-shadow: .5em 0 0 var(--light-blue), -.5em 0 0 var(--light-blue);
  }


.active {
    border-left: 5px solid var(--dark-blue) !important;
    font-weight: 700;
    background-color: var(--light-blue);
}

/* header styling */

header {
    flex-shrink: 0;
    height: var(--header-height);
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    background-color: var(--light-blue);
    z-index: 2;
    width: 100%;
    display: flex;
    justify-content: center;
    box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
}

.header-items {
    flex-grow: 1;
    text-align: center;
    height: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    max-width: 1325px;
}

.header-links {
    display: flex;
    gap: 10px;
    width: 100%;
    justify-content: flex-start;
    padding-left: 17px;
}

.header-link-current a:link {
    opacity: 1;
    font-weight: 700;
}

.header-link-current {
    font-weight: 700;
}

.header-link {
    opacity: 0.5;
}

header a:link {
    text-decoration: none;
}

header a:hover {
    opacity: 1;
}

#logo {
    margin-left: 20px;
    font-size: 22px;
    font-weight: 900;
}

.more-options-icon-wrapper {
    margin-right: 20px;
}

.close-options-icon-wrapper {
    display: none;
    margin-right: 15px;
}

.hamburger-menu-icon-wrapper {
    margin-left: 25px;
}

.close-hamburger-menu-icon-wrapper {
    display: none;
    margin-left: 20px;
}

/* search bar styling */

form {
    display: flex;
    padding: 2px;
    background-color: #8ec6d7;
    height: 27px;
    border-radius: 25px;
}

input[type="search"] {
    border: none;
    background: transparent;
    margin: 0;
    padding: 7px 8px;
    font-size: 14px;
    color: inherit;
    border: 1px solid transparent;
    border-radius: inherit;
}


input[type="search"]::placeholder {
    color: #1b365c;
    opacity: 0.5;
}

button[type="submit"] {
    text-indent: -999px;
    overflow: hidden;
    width: 40px;
    padding: 0;
    margin: 0;
    border: 1px solid transparent;
    border-radius: inherit;
    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
    cursor: pointer;
    opacity: 0.5;
}

button[type="submit"]:hover {
    opacity: 1;
}

button[type="submit"]:focus,
input[type="search"]:focus {
    outline: none;
}

/* menu styling */

.hamburger-menu-column {
    margin-bottom: 30px;
}

.hamburger-menu-column a:hover {
    color: #4374ad;
}

.hamburger-menu {
    height: 100%;
    width: 0; 
    position: fixed; 
    z-index: 1;
    top: var(--header-height);
    left: 0;
    overflow-x: hidden; 
    background-color: var(--light-blue);
    text-indent: -300px;
    transition: 0.5s;
}

.hamburger-menu a:hover {
    text-decoration: underline;
}

.hamburger-menu-content {
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 25px;
    padding-bottom: 75px;
}

.more-options-menu {
    flex-shrink: 0;
    padding-top: 0;
    padding-bottom: 0;
    position: -webkit-sticky;
    position: sticky;
    overflow-x: hidden;
    height: 0px;
    overflow-y: hidden;
    top: var(--header-height);
    background-color: var(--light-blue);
    z-index: 1;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: 0.5s;
    box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
}

.more-options-menu a:link {
    text-decoration: none;
}

.more-options-menu a:hover {
    opacity: 1.0;
}

.menu-search-bar {
    margin-bottom: 25px;
    margin-right: 0px;
    margin-left: 0px;
}

/* main column wrapper */

.main-content-wrapper {
    flex: 1 0 auto;
    display: flex;
    background-color: var(--pastel-yellow);
    flex-direction: row;
    justify-content: center;
}

/* side column styling */

.side-column {
    background-color: var(--pastel-yellow);
    padding-top: var(--column-padding-vertical);
    padding-bottom: var(--column-padding-vertical);
    padding-left: var(--column-padding-horizontal);
    padding-right: var(--column-padding-horizontal);
    max-width: 200px;
    min-width: 200px;
    flex-shrink: 0;
    font-size: 13px;
    overflow-y: scroll;
    max-height: calc(100vh - var(--header-height) - calc(var(--column-padding-vertical) * 2));
    flex-grow: 1;
    position: -webkit-sticky;
    position: sticky;
    top: var(--header-height);
}

.side-column-labels {
    font-weight: 500;
    font-size: 15px;
    margin-bottom: 10px;
}

.combined-column {
    padding-bottom: 30px;
}

.column-link {
    margin-bottom: 10px;
    height: 30px;
    transition: all 100ms ease-in-out;
    display: flex;
    align-items: center;
}

.sections-labels a:link {
    text-decoration: none;
}

.sections-labels a:hover {
    text-decoration: underline;
    color: #4374ad;
}

.toc-link {
    border-left: 5px solid var(--light-blue);
    padding-left: 10px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

.toc-link:hover {
    border-color: var(--dark-blue);
    cursor: pointer;
}

/* main content column styling */

.middle-column {
    flex-grow: 1;
    max-width: 800px;
    padding-left: var(--column-padding-horizontal);
    padding-right: var(--column-padding-horizontal);
    padding-top: var(--column-padding-vertical);
    padding-bottom: var(--column-padding-vertical);
    background-color: var(--pastel-yellow);
}

.middle-column a:hover {
    text-decoration: none;
    color: #4374ad;
}

.main-body-text {
    padding: 20px;
    margin-bottom: 10px;
    background-color: #fcd2b8;
    border-radius: 25px;
}

/* slideshow styling */

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
  background-color: var(--pastel-yellow);
  border-radius: 15px;
}

.button-container {
    margin-top: 30px;
    position: absolute;
    width: 100%;
    aspect-ratio: 16 / 9;
}

.slides {
  display: none;
}

.prev-slide, .next-slide {
  opacity: 0.5;
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 5px 5px 0;
  user-select: none;
}

.next-slide {
  right: 0;
  border-radius: 5px 0 0 5px;
}

.prev-slide:hover, .next-slide:hover {
  background-color: var(--pastel-peach);
}

.caption {
  font-size: 15px;
  padding: 10px;
  text-align: center;
}

.numbertext {
  font-size: 12px;
  padding: 8px;
  text-align: right;
}

/* footer */

footer {
    display: flex;
    flex-shrink: 0;
    height: 40px;
    align-items: center;
    padding-left: 10px;
}

/* responsive media queries */

@media screen and (max-width: 1200px) {
    .right-column {
        display: none;
    }
}

@media screen and (max-width: 1200px) and (min-width: 770px) {
    .middle-column {
        max-width: calc(100vw - calc(var(--column-padding-horizontal) * 2) - 240px);
    }
}

@media screen and (min-width: 1200px) {
    .combined-column {
        display: none;
    }
}

@media screen and (max-width: 991px) and (min-width: 770px) {
    .more-options-icon-wrapper {
        display: block;
    }
    .hamburger-menu,
    .hamburger-menu-icon,
    .hamburger-menu-icon-wrapper,
    .close-hamburger-menu-icon,
    .close-hamburger-menu-icon-wrapper {
        display: none !important;
    }

}

@media screen and (max-width: 991px) {
    .header-links,
    .main-search-bar {
        display: none;
    }
}

@media screen and (min-width: 992px) {
    .more-options-icon-wrapper,
    .more-options-icon,
    .more-options-menu,
    .close-options-icon,
    .close-options-icon-wrapper {
        display: none;
    }
}

@media screen and (max-width: 769px) {
    .left-column {
        display: none;
    }
    .hamburger-menu-icon,
    .hamburger-menu-icon-wrapper {
        display: block;
    }
    #logo {
        margin-left: 0px;
        margin-right: 0px;
        padding-left: 0px;
        padding-right: 0px;
    }
    header {
        overflow: hidden;
    }
}

@media screen and (min-width: 770px) {
    #more-options-button {
        display: block;
    }
    .hamburger-menu,
    .hamburger-menu-icon,
    .hamburger-menu-icon-wrapper,
    .close-hamburger-menu-icon,
    .close-hamburger-menu-icon-wrapper {
        display: none !important;
    }
}

@media (prefers-reduced-motion) {
    .hamburger-menu {
        transition: none !important;
    }
    .more-options-menu {
        transition: none !important;;
    }
}

@media screen and (max-width: 400px) {
    body * {
        overflow-x: hidden;
    }
  }
  

